tests/paczka1/small_fuzzy/26657851.err
Error in line 1: A416 A416 16,9
Error in line 5: Jk6U3XFihuk S588 54,5
Error in line 14: ZotI A416 39,14
